--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,9 +74,17 @@
             android:name=".ui.GasSettingsActivity"
             android:label="@string/title_send_settings" />
 
-        <activity
+        <!--<activity
             android:name=".ui.CustomPinActivity"
-            />
+            /> -->
+
+        <service
+            android:exported="false"
+            android:name=".service.GasService">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="io.fabric.ApiKey"
